[tool.poetry]
name = "calc"
version = "0.1.0"
description = "A Simple calculator to perform arithmetic operations"
authors = ["P S, Adithya (psadi)"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.1"
easygui = "^0.98.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
